# blank-coq-project

./: Makefile  _CoqProject  dune-project
app/: coolapp.v  dune
lib/: a.v  b.v  dune
